# deep_learning_projects

./: README.md  deepfake_detector.pth  load_model.py  main.py  matrix_mul.f08  matrix_mul_mod.mod  my_ui.py  pyproject.toml  test_model.py
my_env/: pyvenv.cfg
my_env/Scripts/: activate  activate.bat
processed_frames/: 0000281776_001_20220405175001729.jpg.npy  0000281776_001_20220405175001729.npy  03.32107903.1.jpg.npy  03.32107903.1.npy  03.8762863.1.jpg.npy  03.8762863.1.npy  04024817_0002.jpg.npy  04024817_0002.npy  1-1.jpg.npy  1-1.npy  1042339f-df18-4971-be3b-f55b3899dffa.jpg.npy  1042339f-df18-4971-be3b-f55b3899dffa.npy  121497-785494.npy  13.jpg.npy  13.npy  14629673_690765_395.jpg.npy  14629673_690765_395.npy  14660035_742382_542_org.npy  1502103829_1265750.npy  1502103829_1265750.png.npy  154040_148258_2257.jpg.npy  154040_148258_2257.npy  1593598771819_1_193818.jpg.npy  1593598771819_1_193818.npy  1627583510_t0wjfnt8vko.jpg.npy  1627583510_t0wjfnt8vko.npy  166163_199938_0228.jpg.npy  166163_199938_0228.npy  1684924690018119.jpg.npy  1684924690018119.npy  1696005187444_KakaoTalk_20230930_012915922.npy  180707-Red-Velvet-Irene-SBS-Super-Concert-in-Taipei-documents-10.npy  1840.jpg_wh860.jpg.npy  1840.jpg_wh860.npy  197ee8eb-bf3d-431c-9c46-572e4ad95771.npy  201508112125243367939A_1.jpg.npy  201508112125243367939A_1.npy  20180219185800548.jpg.npy  20180219185800548.npy  20190113211422_gtoij.jpg.npy  (+220 more)
